--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.1.0'
     implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'com.github.Anon8281:UniversalScheduler:0.1.6'
+    implementation 'org.bstats:bstats-bukkit:3.0.2'
 }
 
 java {
@@ -41,6 +42,7 @@ compileJava {
 }
 
 shadowJar {
+    relocate 'org.bstats', 'net.coma112.cad'
     minimize()
 }
 
