--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,8 @@
 name: CAd
-version: '1.0.0'
+version: '1.0.1'
 main: net.coma112.cad.CAd
 api-version: '1.18'
 folia-supported: true
 authors: [ Coma112 (Vulcan Studio) ]
+depend:
+  - Vault
