--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -122,3 +122,35 @@ menus:
       material: BARRIER
       name: "&eBack to main"
       slot: 49
+
+# Webhook
+# webhook.enabled -> You can enable and disable the webhook feature
+# webhook.url -> Discord Webhook URL
+
+webhook:
+  ad-create-embed:
+    enabled: false
+    url: "WEBHOOK URL HERE!!!"
+    title: "AD CREATED"
+    description: "**{player}** created a new ad. TITLE: **{title}** DESCRIPTION: **{description}** ENDING DATE: **{endingDate}**"
+    color: "MAGENTA"
+    author-name: ""
+    author-url: ""
+    author-icon: ""
+    footer-text: "SENT BY CAD"
+    footer-icon: ""
+    thumbnail: ""
+    image: ""
+  ad-remove-embed:
+    enabled: false
+    url: "WEBHOOK URL HERE!!!"
+    title: "AD REMOVED"
+    description: "**{player}**'s ad has been removed! ID: **{id}** TITLE: **{title}** DESCRIPTION: **{description}** STARTING DATE: **{startingDate}** ENDING DATE: **{endingDate}**"
+    color: "MAGENTA"
+    author-name: ""
+    author-url: ""
+    author-icon: ""
+    footer-text: "SENT BY CAD"
+    footer-icon: ""
+    thumbnail: ""
+    image: ""
